--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 Progress in the Specialization capstone(20%)<progress value="20" max="100"></progress><br>
 Progress in life goals(57%)<progress value="57" max="100"></progress><p>
 
-<summary>More About Me</summary>
-<i class="fa-solid fa-caret-down"></i><span>My Childhood</span>
+<h3>More about me</h3>
+<details>
+<summary>My Childhood</summary>
 <p>I grew up in Kyaikkhami. I lived near Pagoda and I really miss my home town.</p>
 </details>
 
